[package]
name = "fake-tcp"
version = "0.5.0"
edition = "2021"
authors = ["Datong Sun <dndx@idndx.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dndx/phantun"
readme = "README.md"
description = """
A TUN interface based, user space, asynchronous and high performance TCP stack that allows
packet oriented tunneling with minimum overhead.
"""

[features]
benchmark = []

[dependencies]
bytes = "1"
pnet = "0.34"
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"
internet-checksum = "0.2"
flume = "0.11"
async-broadcast = "0.7.0"
compio = { version = "0.9.0", features = ["macros", "time"] }
compio-tun = { git = "https://gitlab.com/ssfdust/compio-tun.git", branch = "dev" }
async-channel = "2.2.0"
futures-channel = "0.3.30"
futures = "0.3.30"

[dev-dependencies]
compio = { version = "0.9.0", features = ["all", "nightly"] }
